binrw/tests/ui/invalid_magic_float.rs
use binrw::BinRead;

#[derive(BinRead)]
#[br(magic = 0.0)]
struct Foo;

fn main() {}
